[package]
name = "exportSalsifyIds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsify_lib = { path = "../salsify_lib"}
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger="0.10.0"
thiserror="1.0.37"
anyhow="1.0.66"