[package]
name = "salsify_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0.149",features=["derive"]}
serde_json="1.0.89"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger="0.10.0"
thiserror="1.0.37"
anyhow="1.0.66"